// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Time renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO fbZkjB"
    disabled={true}
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <input
      className="sc-joKenV giDeyQ"
      disabled={true}
      placeholder=" "
      type="time"
      value="Text"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO fbZkjB"
    disabled={true}
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <input
      className="sc-joKenV epIvjr"
      disabled={true}
      placeholder=" "
      type="time"
      value="Text"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO fbZkjB"
    disabled={true}
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV ihpJux"
        disabled={true}
        placeholder=" "
        type="time"
        value="Text"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Time renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <input
      className="sc-joKenV uPZDC"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-QmDjo yJQM"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <input
      className="sc-joKenV jEnnXl"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-QmDjo yJQM"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV fKIZtH"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-QmDjo yJQM"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Time renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <input
      className="sc-joKenV giDeyQ"
      placeholder=" "
      readOnly={true}
      type="time"
      value="Read only text"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <input
      className="sc-joKenV epIvjr"
      placeholder=" "
      readOnly={true}
      type="time"
      value="Read only text"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV ihpJux"
        placeholder=" "
        readOnly={true}
        type="time"
        value="Read only text"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Time renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <input
      className="sc-joKenV giDeyQ"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <input
      className="sc-joKenV epIvjr"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV ihpJux"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Time renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <input
      className="sc-joKenV giDeyQ"
      placeholder="Placeholder"
      type="time"
    />
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <input
      className="sc-joKenV epIvjr"
      placeholder="Placeholder"
      type="time"
    />
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV ihpJux"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-joKenV bLCwIz"
      dir="rtl"
      placeholder="Placeholder"
      type="time"
    />
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-joKenV cpIvio"
      dir="rtl"
      placeholder="Placeholder"
      type="time"
    />
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV hlHVHy"
        dir="rtl"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-cmvVVv bXkXQL"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <input
      className="sc-joKenV giDeyQ"
      placeholder="medium"
      type="time"
    />
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <input
      className="sc-joKenV epIvjr"
      placeholder="large"
      type="time"
    />
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK gIjyRP"
    >
      <input
        className="sc-joKenV jimMqo"
        placeholder="xlarge"
        type="time"
      />
      <label
        className="sc-cmvVVv keWJSg"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      medium
    </label>
    <input
      className="sc-joKenV aKByj"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <label
      className="sc-bkrxz eKqtUi"
    >
      large
    </label>
    <input
      className="sc-joKenV fVMePs"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-cSizRO hIzBtf"
  >
    <div
      className="sc-fduepK bLHNyM"
    >
      <input
        className="sc-joKenV ihpJux"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-cmvVVv keWJSg"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-QmDjo fzSmyg"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
